# nyx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_flags.txt
res/: default.frag  default.vert
res/shaders/: default.frag  default.vert
src/: main.c
src/engine/: bindings.c  bindings.h  macros.h  render.c  render.h  shaders.c  tools.c  tools.h
src/engine/render/: shaders.c  shaders.h
